<resources>
    <string name="app_name">CodeEdit</string>

    <string name="add_server_fab">Add new server</string>
    <string name="no_servers_configured">No servers configured</string>
    <string name="server_address">Address:</string>
    <string name="server_os">Server OS:</string>
    <string name="ssh_port">SSH port:</string>
    <string name="sambaPort">Samba port:</string>
    <string name="active">Active</string>
    <string name="alert">Alert</string>
    <string name="network_not_wifi">You\'re not connected to a WIFI network.</string>
    <string name="offline">You\'re offline</string>
    <string name="on_mobile">You\'re on a mobile connection</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="something_wrong_2">Well… If you\'re seeing this, the devs have most certainly screwed up!</string>
    <string name="text_continue">Continue</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="connected_to">Connected to:</string>
    <string name="connection_active">Connection is active</string>
    <string name="connection_interrupted_user">The connection was interrupted by the user</string>
    <string name="alias">Alias</string>
    <string name="hostname">Hostname</string>
    <string name="username">Username</string>
    <string name="port_optional_ssh">SSH port (optional)</string>
    <string name="port_optional_samba">Samba port (optional)</string>
    <string name="save">Save</string>
    <string name="launch_ide">Launch IDE</string>
    <string name="disconnect">Disconnect</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="password">Password</string>
    <string name="work_underway">Nothing to see here… yet</string>
    <string name="command">Command</string>
    
    <string name="no_translation_activeConnectionChannel">Connection active</string>
</resources>
