<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ServerDetailsActivity">

    <TextView
        android:id="@+id/serverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/serverAddressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverName"/>

    <TextView
        android:id="@+id/serverUsernameAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/serverAddressInfo"
        app:layout_constraintStart_toEndOf="@id/serverAddressInfo"/>

    <TextView
        android:id="@+id/serverOSInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_os"
        app:layout_constraintTop_toBottomOf="@id/serverAddressInfo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/serverOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/serverOSInfo"
        app:layout_constraintStart_toEndOf="@id/serverOSInfo"/>

    <TextView
        android:id="@+id/sshPortInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ssh_port"
        app:layout_constraintTop_toBottomOf="@id/serverOSInfo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/sshPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/sshPortInfo"
        app:layout_constraintStart_toEndOf="@id/sshPortInfo"/>

    <TextView
        android:id="@+id/sambaPortInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sambaPort"
        app:layout_constraintTop_toBottomOf="@id/sshPortInfo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/sambaPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/sambaPortInfo"
        app:layout_constraintStart_toEndOf="@id/sambaPortInfo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sambaPortInfo"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/mainButtonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:onClick="connect"/>

        <Button
            android:id="@+id/mainButtonLaunchIDE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_ide"
            android:onClick="launchIDE"
            android:enabled="false"/>

        <Button
            android:id="@+id/mainButtonDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:onClick="disconnect"
            android:enabled="false"/>

        <Button
            android:id="@+id/mainButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:onClick="edit"/>

        <Button
            android:id="@+id/mainButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="delete"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>