<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/serverRootCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/serverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/serverAddressInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serverName"/>

        <TextView
            android:id="@+id/serverUsernameAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="@id/serverAddressInfo"
            app:layout_constraintStart_toEndOf="@id/serverAddressInfo"/>

        <TextView
            android:id="@+id/serverOSInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_os"
            app:layout_constraintTop_toBottomOf="@id/serverAddressInfo"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/serverOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="@id/serverOSInfo"
            app:layout_constraintStart_toEndOf="@id/serverOSInfo"/>

        <TextView
            android:id="@+id/serverStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_light"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>